--- a/src/components/AddMember.css
+++ b/src/components/AddMember.css
@@ -15,6 +15,11 @@ margin:10px;
 border:  1px solid black;
 background-color: white;
 }
+
+button:hover {
+    background-color: cadetblue;
+    color: white;
+}
 span {
     color: rgb(145, 79, 41);
     font-size: 15px;
